[lesson2_tutorial] Fixing typo in compositions of rotations in SO(3)

--- a/myst.yml
+++ b/myst.yml
@@ -11,6 +11,8 @@ project:
   math:
     '\myvec': '\mathbf{\boldsymbol{ #1 }}'
     '\mymatrix': '\mathbf{\boldsymbol{ #1 }}'
+#  exports:
+#  - format: pdf
 site:
   template: book-theme
   # options:
