--- a/.github/workflows/notebook_to_html.yml
+++ b/.github/workflows/notebook_to_html.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Jupyter Book
 
 # Controls when the workflow will run
 on:
@@ -26,11 +26,11 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install dependencies and build page
         run: |
-          mkdir -p website
-          python -m pip install jupyter
-          python -m jupyter nbconvert --output-dir='./website' --execute --to html lesson1_tutorial.ipynb
+          python -m pip install jupyter-book --pre
+          python3 -m jupyter book build --all --execute
+          cp -r _build/html website
 
       - name: Setup git name
         run: |
