--- a/.github/workflows/notebook_to_html.yml
+++ b/.github/workflows/notebook_to_html.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Install dependencies and build page
         run: |
           python -m pip install jupyter-book --pre
-          python3 -m jupyter book build --all --execute
+          python -m jupyter book build --all --execute
+          ls -lah
           cp -r _build/html website
 
       - name: Setup git name
