--- a/.github/workflows/notebook_to_html.yml
+++ b/.github/workflows/notebook_to_html.yml
@@ -31,6 +31,7 @@ jobs:
           python -m pip install jupyter-book --pre
           python -m jupyter book build --html --execute
           ls -lah
+          git branch -b website
           cp -r _build/html website
 
       - name: Setup git name
@@ -41,5 +42,6 @@ jobs:
       - name: Publish website changes
         run: |
           cd website
+          git add *
           git commit -a -m "[Automated] Latest automated version of the lessons."
-          git push origin main
+          git push origin website
