--- a/.github/workflows/notebook_to_html.yml
+++ b/.github/workflows/notebook_to_html.yml
@@ -50,6 +50,6 @@ jobs:
           cd website
           git add *
           git commit -a -m "[Automated] Latest automated version of the lessons."
-          git remote set-url origin git@github.com:MarinhoLab/OpenExecutableBooksRobotics.git
+          git remote set-url origin https://${{secrets.GITHUB_TOKEN}}@github.com/MarinhoLab/OpenExecutableBooksRobotics.git
           git push origin website
       
