--- a/.github/workflows/notebook_to_html.yml
+++ b/.github/workflows/notebook_to_html.yml
@@ -36,9 +36,8 @@ jobs:
         run: |
           python -m pip install jupyter-book --pre
           python -m jupyter book build --html --execute
-          ls -lah
           git checkout -b website
-          cp -r _build/html website
+          cp -r _build/html docs
 
       - name: Setup git name
         run: |
@@ -47,7 +46,7 @@ jobs:
 
       - name: Publish website changes
         run: |
-          cd website
+          cd docs
           git add *
           git commit -a -m "[Automated] Latest automated version of the lessons."
           git remote set-url origin https://${{secrets.GITHUB_TOKEN}}@github.com/MarinhoLab/OpenExecutableBooksRobotics.git
