--- a/.github/workflows/notebook_to_html.yml
+++ b/.github/workflows/notebook_to_html.yml
@@ -22,9 +22,10 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
-    # https://stackoverflow.com/questions/75880266/cant-make-push-on-a-repo-with-github-actions
+    # https://stackoverflow.com/questions/75319573/failing-to-deploy-github-pages-because-of-write-permission
     permissions:
-      contents: write
+      id-token: write
+      pages: write
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -37,6 +38,7 @@ jobs:
           python -m pip install jupyter-book --pre
           python -m jupyter book build --html --execute
 
+      # https://jupyterbook.org/en/stable/publish/gh-pages.html
       # Upload the book's HTML as an artifact
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
