--- a/.github/workflows/notebook_to_html.yml
+++ b/.github/workflows/notebook_to_html.yml
@@ -45,8 +45,10 @@ jobs:
         with:
           path: "_build/html"
 
-      # Deploy the book's HTML to GitHub Pages
+      # https://github.com/actions/deploy-pages/issues/305
+      - name: Configure Pages
+        uses: actions/configure-pages@v4
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
 
