Prepending all lessons with DQ, unifying latex directives across files, lesson dq5 with adjusted text.

--- a/myst.yml
+++ b/myst.yml
@@ -12,6 +12,8 @@ project:
   math:
     '\myvec': '\mathbf{\boldsymbol{ #1 }}'
     '\mymatrix': '\mathbf{\boldsymbol{ #1 }}'
+    '\quat': '\mathbf{\boldsymbol{ #1 }}'
+    '\dual': '\varepsilon'
   authors:
     - name: Murilo Marinho
       affiliations:
