--- a/myst.yml
+++ b/myst.yml
@@ -63,6 +63,4 @@ site:
   options:
     logo: M3logo_black.png
     logo_dark: M3logo_white.svg
-    logo_text: 'OXBR: Open Executable Books in Robotics'
-
-
+    logo_text: "(Murilo's) OXBR"
