[notebook_to_html.yml] Creating a jupyter server instance to prevent myst from creating many.

--- a/.github/workflows/notebook_to_html.yml
+++ b/.github/workflows/notebook_to_html.yml
@@ -40,6 +40,7 @@ jobs:
           brew install cppzmq
           python -m pip install jupyter-book --pre
           export BASE_URL="https://marinholab.github.io/OpenExecutableBooksRobotics/"
+          python -m jupyter server &
           python -m jupyter book build --html --execute
 
       # https://jupyterbook.org/en/stable/publish/gh-pages.html
