[lesson2] Adding draft answers.

--- a/myst.yml
+++ b/myst.yml
@@ -40,6 +40,7 @@ project:
         - file: basic_lessons/lesson4_tutorial.ipynb
         - file: basic_lessons/lesson5_tutorial.ipynb
         - file: basic_lessons/lesson1_exercise_answers.ipynb
+        - file: basic_lessons/lesson2_exercise_answers.ipynb
     - title: "[Advanced] DQ Robotics"
       children:
         - file: dqrobotics/README.md
