--- a/myst.yml
+++ b/myst.yml
@@ -42,17 +42,17 @@ project:
         - file: basic_lessons/lesson1_exercise_answers.ipynb
         - file: basic_lessons/lesson2_exercise_answers.ipynb
         - file: basic_lessons/lesson3_exercise_answers.ipynb
-    - title: "[Advanced] DQ Robotics"
-      children:
-        - file: dqrobotics/README.md
-        - file: dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
-        - file: dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
-        - file: dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
-        - file: dqrobotics/lesson4/lesson_dq4_dual_quaternion_basics_part2.ipynb
-        - file: dqrobotics/lesson5/lesson_dq5_robot_control_basics_part1.ipynb
-        - file: dqrobotics/lesson6/lesson_dq6_robot_control_basics_part2.ipynb
-        - file: dqrobotics/lesson7/lesson_dq7_robot_control_basics_part3.ipynb
-        - file: dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
+    #- title: "[Advanced] DQ Robotics"
+    #  children:
+    #    - file: dqrobotics/README.md
+    #    - file: dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
+    #    - file: dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
+    #    - file: dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
+    #    - file: dqrobotics/lesson4/lesson_dq4_dual_quaternion_basics_part2.ipynb
+    #    - file: dqrobotics/lesson5/lesson_dq5_robot_control_basics_part1.ipynb
+    #    - file: dqrobotics/lesson6/lesson_dq6_robot_control_basics_part2.ipynb
+    #    - file: dqrobotics/lesson7/lesson_dq7_robot_control_basics_part3.ipynb
+    #    - file: dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
     - file: book.md
     - file: CHANGELOG.md
     - file: TODO.md
