--- a/.github/workflows/notebook_to_html.yml
+++ b/.github/workflows/notebook_to_html.yml
@@ -21,6 +21,9 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # To prevent github actions from eating up too many enterprise minutes
+    timeout-minutes: 10
     
     # https://github.com/actions/starter-workflows/blob/55eb18560f57898549b12afa6defe7cc79705d6a/pages/static.yml#L13
     permissions:
