[myst] Changing overall structure.

--- a/myst.yml
+++ b/myst.yml
@@ -31,17 +31,16 @@ project:
       id: CC-BY-NC-SA-4.0
   toc:
     - file: README.md
-    - title: "[Basic] Robotics using numpy"
-      children:
-        - file: basic_lessons/README.md
-        - file: basic_lessons/lesson1_tutorial.ipynb
-        - file: basic_lessons/lesson2_tutorial.ipynb
-        - file: basic_lessons/lesson3_tutorial.ipynb
-        - file: basic_lessons/lesson4_tutorial.ipynb
-        - file: basic_lessons/lesson5_tutorial.ipynb
-        - file: basic_lessons/lesson1_exercise_answers.ipynb
-        - file: basic_lessons/lesson2_exercise_answers.ipynb
-        - file: basic_lessons/lesson3_exercise_answers.ipynb
+    - file: basic_lessons/README.md
+    - file: basic_lessons/lesson1_tutorial.ipynb
+    - file: basic_lessons/lesson2_tutorial.ipynb
+    - file: basic_lessons/lesson3_tutorial.ipynb
+    - file: basic_lessons/lesson4_tutorial.ipynb
+    - file: basic_lessons/lesson5_tutorial.ipynb
+    - file: basic_lessons/lesson1_exercise_answers.ipynb
+    - file: basic_lessons/lesson2_exercise_answers.ipynb
+    - file: basic_lessons/lesson3_exercise_answers.ipynb
+    - file: other/dqrobotics.md
     - file: book.md
     - file: CHANGELOG.md
     - file: TODO.md
